Network Error Logging: End to end test.

Write a unit test that actually fires up a test server and makes sure
NEL reports are generated and delivered properly.

Bug: 792974
Change-Id: If5c046a83645b121f53276c5a3fb6afeba011cc8
Reviewed-on: https://chromium-review.googlesource.com/822300
Reviewed-by: Miriam Gershenson <mgersh@chromium.org>
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525094}
Former-commit-id: 194e6114ce80ebdd87ca645731a0787ddd79de5c